--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
     </nav>
 
-    <!-- card -->
-    <div class="w-75 mx-auto mt-3 color-2 input-card">
+    <!-- input card -->
+    <section class="w-75 mx-auto mt-3 color-2 input-card">
         <p class="text-center color-1 p-3">Please enter the data...</p>
         <div class="input-group input-group-lg px-3 pb-3">
             <span class="input-group-text" id="inputGroup-sizing-lg">Buyer Details</span>
@@ -55,12 +55,78 @@
         </div>
 
         <!-- card footer -->
-        <div class="color-5 px-3 d-flex justify-content-center align-items-center">
+        <div class="text-color px-3 d-flex justify-content-center align-items-center">
             <marquee width="90%" direction="left" height="45px">
                 You can add more items using input fields.
             </marquee>
         </div>
-    </div>
+    </section>
+
+    <!-- invoice -->
+    <section class="mt-3 color-3 p-3">
+        <h3 class="text-color">Invoice: #7259736</h3>
+        <hr class="text-color">
+
+        <div class="row row-cols-3 g-4">
+            <div class="col">
+                <div class="color-4 p-3 rounded text-warning h-100">Date: <span id="show-date"></span></div>
+            </div>
+
+            <div class="col">
+                <div class="color-4 p-3 rounded text-warning h-100">
+                    <span class='text-warning'>
+                        Invoice To:
+                    </span> <br>
+                    <span id="buyer-info"></span>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="color-4 p-3 rounded text-warning h-100">
+                    <span class='text-warning'>
+                        Seller:
+                    </span>
+                    <br>
+                    <span id="buyer-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae accusamus
+                        accusantium aut, vel mollitia id!</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- invoice table -->
+        <div class="mt-3">
+            <table class="table table-light">
+                <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Quantity</th>
+                        <th scope="col">Total</th>
+                    </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                    <!-- <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr> -->
+                    <tr>
+                        <td colspan="3" class="fw-bold text-end">SubTotal</td>
+                        <td class="">$ <span id="sub-total">0</span></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3" class="fw-bold text-end">Tax</td>
+                        <td class="">$ <span id="tax">0</span></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3" class="fw-bold text-end">Grand Total</td>
+                        <td class="">$ <span id="tax">0</span></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
