--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
         <div class="input-group input-group-lg px-3 pb-3 w-75 mx-auto">
             <span class="input-group-text" id="inputGroup-sizing-lg">Buyer Details</span>
             <textarea class="form-control" id="buyer-details-input" rows="2"></textarea>
-            <button class="btn btn-primary" id="detail-submit-btn">Submit</button>
+            <button class="btn btn-primary" id="detail-submit-button">Submit</button>
         </div>
 
         <p class="text-center color-1 py-3">Enter the item details...</p>
         <div class="px-3 mt-3 w-50 mx-auto">
             <div class="input-group mb-3">
                 <span class="input-group-text" id="inputGroup-sizing-default">Item Name</span>
-                <input type="text" class="form-control" aria-label="Sizing example input"
+                <input id="item-name-input" type="text" class="form-control" aria-label="Sizing example input"
                     aria-describedby="inputGroup-sizing-default">
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="inputGroup-sizing-default">Price</span>
-                <input type="text" class="form-control" aria-label="Sizing example input"
+                <input id="item-price-input" type="number" class="form-control" aria-label="Sizing example input"
                     aria-describedby="inputGroup-sizing-default">
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="inputGroup-sizing-default">Quantity</span>
-                <input type="text" class="form-control" aria-label="Sizing example input"
+                <input id="item-quantity-input" type="number" class="form-control" aria-label="Sizing example input"
                     aria-describedby="inputGroup-sizing-default">
             </div>
             <div class="d-flex justify-content-center pb-3">
@@ -104,24 +104,27 @@
                         <th scope="col">Total</th>
                     </tr>
                 </thead>
-                <tbody class="table-group-divider">
+                <tbody id="table-info" class="table-group-divider">
                     <!-- <tr>
                         <th scope="row">1</th>
                         <td>Mark</td>
                         <td>Otto</td>
                         <td>@mdo</td>
                     </tr> -->
+
+                </tbody>
+                <tbody class="table-group-divider">
                     <tr>
                         <td colspan="3" class="fw-bold text-end">SubTotal</td>
-                        <td class="">$ <span id="sub-total">0</span></td>
+                        <td>$ <span id="sub-total">0</span></td>
                     </tr>
                     <tr>
                         <td colspan="3" class="fw-bold text-end">Tax</td>
-                        <td class="">$ <span id="tax">0</span></td>
+                        <td>$ <span id="tax">0</span></td>
                     </tr>
                     <tr>
                         <td colspan="3" class="fw-bold text-end">Grand Total</td>
-                        <td class="">$ <span id="grand-total">0</span></td>
+                        <td>$ <span id="grand-total">0</span></td>
                     </tr>
                 </tbody>
             </table>
@@ -138,8 +141,7 @@
                 <div class="col">
                     <div class="text-end">
                         <p class='text-warning'>Total Amount</p>
-                        <p><span class="fs-2">$</span><span class='text-warning fw-bold fs-2'
-                                id="grand-total-2">0</span>
+                        <p><span class="fs-2">$</span><span class='text-warning fw-bold fs-2' id="total-amount">0</span>
                             <br>
                             Taxes Included
                         </p>
@@ -152,6 +154,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+
+    <!-- JavaScript -->
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
