--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <!-- input card -->
     <section class="mt-3 color-2 input-card">
         <p class="text-center color-1 p-3">Please enter the data...</p>
-        <div class="input-group input-group-lg px-3 pb-3 w-75 mx-auto">
+        <div class="input-size input-group input-group-sm px-3 pb-3">
             <span class="input-group-text" id="inputGroup-sizing-lg">Buyer Details</span>
             <textarea class="form-control" id="buyer-details-input" rows="2"></textarea>
             <button class="btn btn-primary" id="detail-submit-button">Submit</button>
         </div>
 
         <p class="text-center color-1 py-3">Enter the item details...</p>
-        <div class="px-3 mt-3 w-50 mx-auto">
+        <div class="input-size px-3 mt-3">
             <div class="input-group mb-3">
                 <span class="input-group-text" id="inputGroup-sizing-default">Item Name</span>
                 <input id="item-name-input" type="text" class="form-control" aria-label="Sizing example input"
@@ -67,12 +67,12 @@
         <h3 class="text-color">Invoice: #7259736</h3>
         <hr class="text-color">
 
-        <div class="row row-cols-3 g-4">
-            <div class="col">
+        <div class="row g-4">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="color-4 p-3 rounded text-warning h-100">Date: <span id="show-date"></span></div>
             </div>
 
-            <div class="col">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="color-4 p-3 rounded text-warning h-100">
                     <span class='text-warning'>
                         Invoice To:
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="color-4 p-3 rounded text-warning h-100">
                     <span class='text-warning'>
                         Seller:
@@ -104,15 +104,8 @@
                         <th scope="col">Total</th>
                     </tr>
                 </thead>
-                <tbody id="table-info" class="table-group-divider">
-                    <!-- <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr> -->
+                <tbody id="table-info" class="table-group-divider"></tbody>
 
-                </tbody>
                 <tbody class="table-group-divider">
                     <tr>
                         <td colspan="3" class="fw-bold text-end">SubTotal</td>
@@ -135,7 +128,7 @@
                 <div class="col">
                     <span class='text-warning'>Bank Transfer</span>
                     <br>
-                    <span>Account Name: Al Amin Account Number: 987654321123 Code: 123123123123</span>
+                    <p>Account Name: Al Amin <br> Account Number: 987654321123 <br>Code: 123123123123</p>
                 </div>
 
                 <div class="col">
@@ -148,8 +141,17 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
+    <section class="d-flex justify-content-center mt-3">
+        <button class="me-3 ms-1 print-button"><i class="bi bi-printer"></i> Print Invoice</button>
+        <button class="download-button me-1"><i class="bi bi-cloud-download"></i> Download Invoice</button>
+    </section>
+    <footer class="mt-3 color-1 pt-3 pb-1">
+        <p class="text-center"><small>Copyright &copy; 2022. All Rights
+                Reserved</small></p>
+    </footer>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
